# cat-and-dog-klasifikasi

./: .gitattributes  .gitignore  README.md  UAP.ipynb  app.py  pyproject.toml  requirements.txt
models/: Readme.md  labels.json  model_base_non_pretrained.keras  model_pretrained_1_mobilenetv2.keras  model_pretrained_2_efficientnetb0.keras
models/citra dataset contoh/: Readme.md
src/: infer_citra.py
